--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -71,7 +71,7 @@
     font-weight: normal;
     font-style: normal;
 }
-
+body{ overflow-x: hidden; }
 a:hover{ text-decoration: none; }
 ul{ list-style: none;padding: 0;margin: 0; }
 section{ width: 100%;}
@@ -219,7 +219,7 @@ a.btn.btn-close {    position: absolute;    bottom: -1.7rem;    left: 44%;    ba
   }
 
 section .title{ font-family: 'HARABARA'; font-size: 3rem; margin: 0 }
-section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
+section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; }
 @media( max-width: 768px){
     section .title { font-size: 2rem; }
 }
@@ -250,7 +250,7 @@ section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
 }
 /***    productos hover list in navbar-principal    ***/
 #products-list-navbar {
-    position: absolute;
+    position: fixed;
     top: 3.6rem;
     width: 100%;
     background: rgba(130, 212, 212, 0.86);
@@ -293,7 +293,7 @@ section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
 /*******************************************************/
 #section_1 {
     margin-top: 4rem;
-    height: 40rem;
+    height: 100%;
     /*background-image: url('../img/intro_perro.png');
     background-repeat: no-repeat;
     background-size: 40rem;
@@ -355,6 +355,7 @@ section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
 /*******************************************************/
 #section_2 {
     padding: 2.5rem 1.5rem;
+    padding-top: 7rem;
     position: relative;
     z-index: 999;
     background: #fff;
@@ -481,8 +482,8 @@ section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
     right: -4rem;
     top: 2rem;
 width: 110%;}
-#section_3 ul li{ padding: .4rem 0;transform: scale(.8); }
-#section_3 ul li:last-child{     position: absolute;    bottom: -2.5rem;    width: 100%;    padding-left: 1rem;}
+#section_3 ul li{ padding: .4rem 0; transform: scale(.8) }
+#section_3 ul li:last-child{     position: absolute;    bottom: -2.5rem;    width: 100%;    padding-left: 1.3rem;}
 #section_3 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_3 ul li .text {    display: inline-flex;    width: 65%; }
 #section_3 ul hr {     width: 75%;    margin: 0;    margin-left: 2rem;}
@@ -491,12 +492,11 @@ width: 110%;}
 }
 #section_3 .downloads {
     background: url('../img/icons_downloads_orange.png') no-repeat;
-    padding: .6rem 1rem;
-    margin: 0 6px; }
+    padding: 8px 15px 11px 15px; }
 #section_3 .downloads.pdf { background-position: 0 -2.1rem }
 #section_3 .downloads.pdf:hover { background-position: 0 0 }
-#section_3 .downloads.video { background-position: -2.2rem -2.2rem; padding: .6rem 1.3rem; margin: 0; }
-#section_3 .downloads.video:hover { background-position:  -2.2rem 0 ;  }
+#section_3 .downloads.video { background-position: -33px -2.2rem; padding: 7px 15px 11px 23px; }
+#section_3 .downloads.video:hover { background-position:  -33px 0 ;  }
 
 @media( max-width: 768px){
     #section_3 .box{ position: initial; }
@@ -519,7 +519,7 @@ width: 110%;}
 /*                      SECCION 4                      */
 /*******************************************************/
 #section_4 {
-    padding: 0 0 3rem 0;
+    padding: 6rem 0 0rem 0;
 }
 #section_4 img.dog {
     position: relative;
@@ -557,6 +557,7 @@ width: 110%;}
 #section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999;    left: -8rem; }
 #section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 4rem;       width: 80%;}
 #section_4 ul li {line-height: 2.5rem;transform: scale(.8); }
+#section_4 ul li:last-child{ position: relative; z-index: 1040;padding-left: 2rem; }
 #section_4 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_4 ul li .text {    display: inline-flex;    width: 65%; }
 #section_4 ul hr {         width: 69%;    margin: 0;    margin-left: 3.5rem;}
@@ -565,12 +566,11 @@ width: 110%;}
 }
 #section_4 .downloads {
     background: url('../img/icons_downloads_yellow.png') no-repeat;
-    padding: 8px 14px 12px 15px;
-    margin: 0 6px; }
-#section_4 .downloads.pdf { background-position: 0 -2.5rem }
+    padding: 8px 14px 12px 15px; }
+#section_4 .downloads.pdf { background-position: 0 -2.5rem;-moz-margin-end: 5px; }
 #section_4 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_4 .downloads.video { background-position: -2.2rem -2.5rem; padding: .6rem 1.3rem; margin: 0}
-#section_4 .downloads.video:hover { background-position:  -2.2rem -.1rem;  }
+#section_4 .downloads.video { background-position: -35px -2.5rem;    padding: 8px 20px 13px 15px;}
+#section_4 .downloads.video:hover { background-position:  -35px -.1rem;  }
 #section_4::after{
     content: ' ';
     width: 0;
@@ -616,7 +616,7 @@ width: 110%;}
 /*                      SECCION 5                      */
 /*******************************************************/
 #section_5 {
-    padding: 3rem 0;
+    padding: 6rem 0 0 0;
 }
 #section_5 img.dog {
     position: absolute;
@@ -640,16 +640,17 @@ width: 110%;}
 #section_5 .box .item img{ width: 10rem; position: relative;    top: -2rem;}
 #section_5 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;    position: relative;    bottom: -3rem; }
 #section_5 ul li {line-height: 1rem; padding: .5rem 0;}
+#section_5 ul li:last-child{ position: relative; z-index: 1040 ;    transform: scale(.8);    margin-left: -10px;}
 #section_5 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_5 ul li .text {    display: inline-flex;    width: 65%; }
 #section_5 ul hr {         width: 75%;    margin: 0;    margin-left: 1rem;}
-#section_5 ul li img{    transform: scale(.9);}
+#section_5 ul li img{    transform: scale(.7);}
 #section_5 .downloads {
     background: url('../img/icons_downloads_green.png') no-repeat;
-    padding: .7rem .95rem;
-    margin: 0 6px;     background-size: 65px;}
-#section_5 .downloads.pdf { background-position:0 -35px }
-#section_5 .downloads.pdf:hover { background-position: 0 0 }
+    padding: 10px 15px;
+         background-size: 65px;}
+#section_5 .downloads.pdf { background-position:0 -36px; margin-right: 5px; }
+#section_5 .downloads.pdf:hover { background-position: -1px -2px }
 #section_5 .downloads.video { background-position: -31px -35px;    padding: .7rem 1.4rem;    margin: 0;}
 #section_5 .downloads.video:hover { background-position:  -31px 0px;  }
 
@@ -683,6 +684,7 @@ width: 110%;}
 #section_6 .box .item img{ width: 11rem; }
 #section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;      position: relative;    top: 3rem; width: 92%;  }
 #section_6 ul li {line-height: 1rem;    padding: .5rem 0;transform: scale(.8);}
+#section_6 ul li:last-child{ position: relative; z-index: 1040;    padding-left: 25px; }
 #section_6 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_6 ul li .text {    display: inline-flex;    width: 65%; }
 #section_6 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
@@ -691,7 +693,7 @@ width: 110%;}
 }
 #section_6 .downloads {
     background: url('../img/icons_downloads_green_v2.png') no-repeat; }
-#section_6 .downloads.pdf {     background-position: 0 -38px;    padding: 10px 15px 17px 11px; }
+#section_6 .downloads.pdf {     background-position: 0 -38px;    padding: 10px 15px 17px 11px; -moz-margin-end: 5px;}
 #section_6 .downloads.pdf:hover { background-position: 0 2px }
 #section_6 .downloads.video {        background-position: -1.9rem -2.2rem;    padding: 12px 10px 13px 26px;    margin: 0;}
 #section_6 .downloads.video:hover {     background-position: -30px 5px;  }
@@ -706,7 +708,7 @@ width: 110%;}
 /*                      SECCION 7                      */
 /*******************************************************/
 #section_7 {
-    padding: 5rem 0 7rem 0;
+    padding: 5rem 0 1rem 0;
 }
 #section_7 img.dog {
     width: 18rem;
@@ -722,8 +724,9 @@ width: 110%;}
 #section_7 .box .item { text-align: center; margin-left: -4rem;}
 #section_7 .box .item:first-child { padding: 0; }
 #section_7 .box .item img{ width: 11rem; }
-#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 6rem; }
-#section_7 ul li {    line-height: 1rem;    padding: .3rem 0;    transform: scale(.9);}
+#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 6rem; transform: scale(.8);}
+#section_7 ul li {    line-height: 1rem;    padding: .3rem 0;    }
+#section_7 ul li:last-child{ position: relative; z-index: 1040;padding-left: 12px; }
 #section_7 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
 #section_7 ul li .text {    display: inline-flex;    width: 75%; }
 #section_7 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
@@ -747,6 +750,9 @@ width: 110%;}
 /*******************************************************/
 /*                      SECCION 8                      */
 /*******************************************************/
+#section_8 {
+    padding: 6rem 0 0 0;
+}
 #section_8 img.dog {
     width: 13rem;
     left: 5rem;
@@ -762,7 +768,7 @@ width: 110%;}
 }
 #section_8 .box{
     position: relative;
-    top: 6rem;
+    top: 9rem;
 }
 #section_8 .description {
     width: 38%;
@@ -771,8 +777,9 @@ width: 110%;}
 #section_8 .box .item { text-align: center; margin-left: -2rem;}
 #section_8 .box .item:first-child { padding: 0; }
 #section_8 .box .item img.frasco{ width: 12rem; }
-#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; position: relative;    top: 4rem;}
-#section_8 ul li {    line-height: 1rem;    padding: .5rem 0;transform: scale(.9);}
+#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; position: relative;    top: 4rem;    right: -3rem;  }
+#section_8 ul li {    line-height: 1rem;    padding: .5rem 0;  transform: scale(.8);}
+#section_8 ul li:last-child {    padding-left: 12px;}
 #section_8 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
 #section_8 ul li .text {    display: inline-flex;    width: 75%; }
 #section_8 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
@@ -783,7 +790,7 @@ width: 110%;}
     background: url('../img/icons_downloads_red.png') no-repeat;
     padding: 7px 7px 10px 18px;
     background-size: 60px; }
-#section_8 .downloads.pdf { background-position: 0 -33px;}
+#section_8 .downloads.pdf { background-position: 0 -33px;-moz-margin-end: 5px;}
 #section_8 .downloads.pdf:hover { background-position: 0 1px }
 #section_8 .downloads.video { background-position: -28px -33px;    padding-right: 1.4rem;    margin: 0;}
 #section_8 .downloads.video:hover { background-position:  -28px 0;  }
@@ -882,19 +889,19 @@ width: 110%;}
     background: url('../img/buttons_down_modl.png');
 }
 #section_9  .btn-sc-9.brochure {
-    padding: 14px 83px;
-    background-position: 0rem 49px;
+    padding: 14px 83px;    
+    background-position: 0rem 0;
     margin: 0 1rem 0 0;
 }
 #section_9  .btn-sc-9.brochure:hover {
-    background-position: 0rem 0;
+    background-position: 0rem 49px;
 }
 #section_9  .btn-sc-9.tabla {
     padding: 14px 84px;
-    background-position: -167px 49px;
+    background-position: -167px 0;    
 }
 #section_9  .btn-sc-9.tabla:hover {
-    background-position: -167px 0;
+    background-position: -167px 49px;
 }
 #tabla-modal img { cursor: zoom-in}
 #tabla-modal .btn-close{
