--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -430,15 +430,15 @@ section .description{ font-family: 'MENTONE-SEMIBOL', Arial, Helvetica, sans-ser
     padding-bottom: 2.1rem;
 }
 #section_2_more ul li .icon{
-    width: 15%;
-    text-align: right;
-    display: inline-block;
+    width: 21%;
+    text-align: center;
+    position: absolute;
 }
+#section_2_more ul li .icon.first { width: 15%; }
+#section_2_more ul li .icon.second { width: 21%; }
+
 #section_2_more ul li .text{
-    width: 80%;
-    display: inline-block;
-    margin-left: .2rem;
-    padding-right: 3px;    
+    margin-left: 4.5rem;
 }
 
 @media( max-width: 768px){
@@ -483,25 +483,25 @@ section .description{ font-family: 'MENTONE-SEMIBOL', Arial, Helvetica, sans-ser
 }
 #section_3 .box .item img{ width: 150%; }
 #section_3 ul { font-family: 'MENTONE-SEMIBOL';
-    font-size: .8rem;    
+    font-size: .7rem;    
     position: relative;
     right: -4rem;
     top: 2rem;
 width: 110%;}
-#section_3 ul li{ padding: .4rem 0; transform: scale(.8) }
-#section_3 ul li:last-child{     position: absolute;    bottom: -2.5rem;    width: 100%;    padding-left: 1.3rem;}
+#section_3 ul li{ padding: .4rem 0; }
+#section_3 ul li:last-child{     position: absolute;    bottom: -3.5rem;    width: 100%;        padding-left: .5rem;    transform: scale(.9);}
 #section_3 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_3 ul li .text {    display: inline-flex;    width: 65%; }
-#section_3 ul hr {     width: 75%;    margin: 0;    margin-left: 2rem;}
+#section_3 ul hr {     width: 75%;    margin: 0;    margin-left: 1rem;}
 #section_3 ul li img{
     transform: scale(.8);
 }
 #section_3 .downloads {
     background: url('../img/icons_downloads_orange.png') no-repeat;
-    padding: 8px 15px 11px 15px; }
+    padding: 10px 15px 11px 15px; }
 #section_3 .downloads.pdf { background-position: 0 -2.1rem }
 #section_3 .downloads.pdf:hover { background-position: 0 0 }
-#section_3 .downloads.video { background-position: -33px -2.2rem; padding: 7px 15px 11px 23px; }
+#section_3 .downloads.video { background-position: -33px -2.2rem; padding: 9px 15px 11px 23px; }
 #section_3 .downloads.video:hover { background-position:  -33px 0 ;  }
 
 @media( max-width: 768px){
@@ -561,21 +561,21 @@ width: 110%;}
 #section_4 .box .item { text-align: center; margin-left: -2rem;}
 #section_4 .box .item:first-child { padding: 0; }
 #section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999;    left: -8rem; }
-#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 4rem;       width: 80%;}
-#section_4 ul li {line-height: 2.5rem;transform: scale(.8); }
-#section_4 ul li:last-child{ position: relative; z-index: 1040;padding-left: 2rem; }
-#section_4 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;position: relative;    top: 4rem;      left: 2rem;     width: 80%;}
+#section_4 ul li {line-height: 2.5rem;}
+#section_4 ul li:last-child{ position: relative; z-index: 1040;    margin-top: 1rem;    padding-left: 1rem;}
+#section_4 ul li .icon {     width: 20%;    display: inline-block;    text-align: center; }
 #section_4 ul li .text {    display: inline-flex;    width: 65%; }
-#section_4 ul hr {         width: 69%;    margin: 0;    margin-left: 3.5rem;}
+#section_4 ul hr {             width: 70%;    margin: 0;    margin-left: 1rem;}
 #section_4 ul li img{
     transform: scale(.8);
 }
 #section_4 .downloads {
     background: url('../img/icons_downloads_yellow.png') no-repeat;
-    padding: 8px 14px 12px 15px; }
+    padding: 10px 14px 12px 15px; }
 #section_4 .downloads.pdf { background-position: 0 -2.5rem;-moz-margin-end: 5px; }
 #section_4 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_4 .downloads.video { background-position: -35px -2.5rem;    padding: 8px 20px 13px 15px;}
+#section_4 .downloads.video { background-position: -35px -2.5rem;    padding: 10px 20px 13px 15px;}
 #section_4 .downloads.video:hover { background-position:  -35px -.1rem;  }
 #section_4::after{
     content: ' ';
@@ -688,18 +688,18 @@ width: 110%;}
 #section_6 .box .item { text-align: center; margin-left: -2rem;}
 #section_6 .box .item:first-child { padding: 0; }
 #section_6 .box .item img{ width: 11rem; }
-#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;      position: relative;    top: 3rem; width: 92%;  }
-#section_6 ul li {line-height: 1rem;    padding: .5rem 0;transform: scale(.8);}
-#section_6 ul li:last-child{ position: relative; z-index: 1040;    padding-left: 25px; }
-#section_6 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;      position: relative;    top: 3rem; left: 1rem;width: 92%;  }
+#section_6 ul li {line-height: 1rem;    padding: .3rem 0;}
+#section_6 ul li:last-child{ position: relative; z-index: 1040;    padding-left: 10px; }
+#section_6 ul li .icon {     width: 20%;    display: inline-block;    text-align: center; }
 #section_6 ul li .text {    display: inline-flex;    width: 65%; }
-#section_6 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
+#section_6 ul hr {         width: 78%;    margin: 0;    margin-left: 7px;}
 #section_6 ul li img{
     transform: scale(.8);
 }
 #section_6 .downloads {
     background: url('../img/icons_downloads_green_v2.png') no-repeat; }
-#section_6 .downloads.pdf {     background-position: 0 -38px;    padding: 10px 15px 16px 11px; -moz-margin-end: 5px;}
+#section_6 .downloads.pdf {     background-position: 0 -38px;    padding: 10px 17px 16px 11px; -moz-margin-end: 5px;}
 #section_6 .downloads.pdf:hover { background-position: 0 2px }
 #section_6 .downloads.video {        background-position: -1.9rem -2.2rem;    padding: 12px 10px 13px 26px;    margin: 0;}
 #section_6 .downloads.video:hover {     background-position: -30px 5px;  }
@@ -730,9 +730,9 @@ width: 110%;}
 #section_7 .box .item { text-align: center; margin-left: -4rem;}
 #section_7 .box .item:first-child { padding: 0; }
 #section_7 .box .item img{ width: 11rem; }
-#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 6rem; }
-#section_7 ul li {    line-height: 1rem;    padding: .3rem 0;  transform: scale(.8);  }
-#section_7 ul li:last-child{ position: relative; z-index: 1040;padding-left: 12px; }
+#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;position: relative;    top: 6rem; }
+#section_7 ul li {    line-height: 1rem;    padding: .3rem 0;   }
+#section_7 ul li:last-child{ position: relative; z-index: 1040;padding-left: 0;    margin-top: 10px; transform: scale(.9) }
 #section_7 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
 #section_7 ul li .text {    display: inline-flex;    width: 75%; }
 #section_7 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
@@ -783,8 +783,8 @@ width: 110%;}
 #section_8 .box .item { text-align: center; margin-left: -2rem;}
 #section_8 .box .item:first-child { padding: 0; }
 #section_8 .box .item img.frasco{ width: 12rem; }
-#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; position: relative;    top: 4rem;    right: -3rem;  }
-#section_8 ul li {    line-height: 1rem;    padding: .5rem 0;  transform: scale(.8);}
+#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem; position: relative;    top: 4rem;    right: -2rem;  }
+#section_8 ul li {    line-height: 1rem;    padding: .5rem 0; }
 #section_8 ul li:last-child {    padding-left: 12px;}
 #section_8 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
 #section_8 ul li .text {    display: inline-flex;    width: 75%; }
@@ -794,7 +794,7 @@ width: 110%;}
 }
 #section_8 .downloads {
     background: url('../img/icons_downloads_red.png') no-repeat;
-    padding: 7px 7px 10px 18px;
+    padding: 9px 8px 10px 18px;
     background-size: 60px; }
 #section_8 .downloads.pdf { background-position: 0 -33px;-moz-margin-end: 5px;}
 #section_8 .downloads.pdf:hover { background-position: 0 1px }
@@ -849,7 +849,7 @@ width: 110%;}
 #section_9 .frascos img:hover {transform: scale(1.1);} 
 #section_9 .frascos img:nth-child(even){ margin-top: -1rem;}
 #section_9 .tags {
-    margin-bottom: 10rem;
+    margin-bottom: 7.5rem;
     margin-left: 6rem;
 }
 #section_9 .tags .tag{
