--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -113,7 +113,7 @@ section .title{font-size:2rem}
 }
 @media( max-width: 768px ) {
 #section_1{background-size:20rem;background-position:bottom}
-#section_1 .box_one{top:4rem;text-align:center}
+#section_1 .box_one{top:4rem;text-align:center;background:transparent;box-shadow:none}
 #section_1 .title{font-size:2.5rem}
 #section_1 .sub_title{font-size:1.4rem}
 #section_1 .description{font-size:.8rem;text-align: center;margin: auto}
@@ -123,7 +123,7 @@ section .title{font-size:2rem}
 #section_1 .hueso.n8{width:20%;top:5rem}
 #section_1 .hueso.n9{right:-1rem}
 #section_1 .hueso.n10{right:-3rem}
-#section_1 img.dog{width:22rem;left: -1rem;}
+#section_1 img.dog{width:22rem;margin-left: 25%;margin-top: 1rem;}
 }
 #section_2{padding:2.5rem 1.5rem;padding-top:7rem;position:relative;z-index:999;background:#fff}
 #section_2 .col-3{margin-right:8rem}
